name:                thentos-core
version:             0.0.1.1
synopsis:            The swiss army knife of privacy-preserving identity management
description:
  This is an experimental platform for identity management in web
  applications, inspired by software like shibboleth and sproxy.  See
  README.md for more (if still a bit sketchy) details.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18
data-files:          schema/schema.sql schema/wipe.sql

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: False

flag with-build-docs-executable
  default: False

-- snap-development mode seems to have issues:
-- https://groups.google.com/forum/#!topic/snap_framework/7fWgxMxjNWE
-- https://groups.google.com/forum/#!topic/snap_framework/NnjKNYU5yeI
-- https://groups.google.com/forum/#!topic/snap_framework/A459Gt8kr0U
Flag snap-development
  Description: build the snap frontend in development (interpreted) mode
  Default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j5
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w
  exposed-modules:
      Database.PostgreSQL.Simple.Missing
    , LIO.Missing
    , Snap.Inline
    , Snap.Missing
    , System.Log.Missing
    , Thentos
    , ThentosDocs
    , Thentos.Action
    , Thentos.Action.Core
    , Thentos.Backend.Api.Auth
    , Thentos.Backend.Api.Docs.Common
    , Thentos.Backend.Api.Docs.Proxy
    , Thentos.Backend.Api.Docs.Simple
    , Thentos.Backend.Api.Proxy
    , Thentos.Backend.Api.Simple
    , Thentos.Backend.Core
    , Thentos.Config
    , Thentos.Frontend
    , Thentos.Frontend.Handlers
    , Thentos.Frontend.Handlers.Combinators
    , Thentos.Frontend.Pages
    , Thentos.Frontend.Types
    , Thentos.Smtp
    , Thentos.Transaction
    , Thentos.Transaction.Core
    , Thentos.Types
    , Thentos.Util
  other-modules:
      Paths_thentos_core
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , aeson-utils >=0.3.0.2 && <0.4
    , async >=2.0.2 && <2.1
    , attoparsec >=0.13 && <0.14
    , base >=4.8.1.0 && <5
    , blaze-builder >=0.4.0.1 && <0.5
    , blaze-html >=0.8.1.0 && <0.9
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , cereal >=0.4.1.1 && <0.5
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , digestive-functors >=0.8.0.0 && <0.9
    , digestive-functors-blaze >=0.6.0.6 && <0.7
    , digestive-functors-snap >=0.6.1.3 && <0.7
    , directory >=1.2.2.0 && <1.3
    , either >=4.4.1 && <4.5
    , email-validate >=2.1.3 && <2.2
    , errors >=2.0.0 && <2.1
    , exceptions >=0.8 && <0.9
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.1
    , generic-aeson >=0.2.0.7 && <0.3
    , hslogger >=1.2.9 && <1.3
    , http-client >=0.4.22 && <0.5
    , http-media >=0.6.2 && <0.7
    , http-reverse-proxy >=0.4.2 && <0.5
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , MonadCatchIO-transformers >=0.3.1.3 && <0.4
    , monad-control >=1 && <1.1
    , mtl >=2.2.1 && <2.3
    , mtl-compat >=0.2.1.3 && <0.3
    , old-locale >=1.0.0.7 && <1.1
    , postgresql-simple >=0.4.10 && <0.5
    , pretty-show >=1.6.8.2 && <1.7
    , random >=1.1 && <1.2
    , resource-pool >=0.2.3.2 && <0.3
    , safe >=0.3.9 && <0.4
    , safecopy >=0.8.5 && <0.9
    , sandi >=0.3.5 && <0.4
    , scrypt >=0.5.0 && <0.6
    , servant ==0.5
    , servant-docs ==0.5
    , servant-server ==0.5
    , snap >=0.14.0.6 && <0.15
    , snap-core >=0.9.8.0 && <0.10
    , snap-server >=0.9.5.1 && <0.10
    , string-conversions >=0.4 && <0.5
    , template-haskell >=2.10.0.0 && <2.11
    , text >=1.2.1.3 && <1.3
    , thyme >=0.3.5.5 && <0.4
    , time >=1.5 && <1.6
    , transformers >=0.4.2.0 && <0.5
    , unordered-containers >=0.2.5.1 && <0.3
    , uri-bytestring >=0.1.8 && <0.2
    , vector-space >=0.10.2 && <0.11
    , void >=0.7 && <0.8
    , wai >=3.0.3.0 && <3.1
    , warp >=3.1.3 && <3.2

executable thentos
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -j5 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w

executable build-docs
  if flag(with-build-docs-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      BuildDocs.hs
  ghc-options:
      -Wall -j5 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , thentos-core
