name:                thentos-core
version:             0.0.1.1
synopsis:            The swiss army knife of privacy-preserving identity management
description:
  This is an experimental platform for identity management in web
  applications, inspired by software like shibboleth and sproxy.  See
  README.md for more (if still a bit sketchy) details.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18
data-files:          schema/schema.sql schema/wipe.sql

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: False

flag with-build-docs-executable
  default: False

-- snap-development mode seems to have issues:
-- https://groups.google.com/forum/#!topic/snap_framework/7fWgxMxjNWE
-- https://groups.google.com/forum/#!topic/snap_framework/NnjKNYU5yeI
-- https://groups.google.com/forum/#!topic/snap_framework/A459Gt8kr0U
Flag snap-development
  Description: build the snap frontend in development (interpreted) mode
  Default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w
  exposed-modules:
      Database.PostgreSQL.Simple.Missing
    , LIO.Missing
    , Snap.Inline
    , Snap.Missing
    , System.Log.Missing
    , Thentos
    , ThentosDocs
    , Thentos.Action
    , Thentos.Action.Core
    , Thentos.Backend.Api.Auth
    , Thentos.Backend.Api.Docs.Common
    , Thentos.Backend.Api.Docs.Proxy
    , Thentos.Backend.Api.Docs.Simple
    , Thentos.Backend.Api.Proxy
    , Thentos.Backend.Api.Simple
    , Thentos.Backend.Core
    , Thentos.Config
    , Thentos.Frontend
    , Thentos.Frontend.Handlers
    , Thentos.Frontend.Handlers.Combinators
    , Thentos.Frontend.Pages
    , Thentos.Frontend.Types
    , Thentos.Smtp
    , Thentos.Transaction
    , Thentos.Transaction.Core
    , Thentos.Types
    , Thentos.Util
  other-modules:
      Paths_thentos_core
  build-depends:
      base
    , aeson
    , aeson-pretty
    , aeson-utils
    , async
    , attoparsec
    , blaze-builder
    , blaze-html
    , bytestring
    , case-insensitive
    , cereal
    , configifier >= 0.0.4
    , containers
    , cryptonite
    , digestive-functors
    , digestive-functors-blaze >= 0.6.0.5
    , digestive-functors-snap >= 0.6.1.1
    , directory
    , either
    , email-validate >= 2.1.3
    , errors
    , exceptions
    , filepath
    , functor-infix
    , generic-aeson
    , hslogger
    , http-client
    , http-media
    , http-reverse-proxy
    , http-types
    , lens
    , lio
    , lifted-base
    , mime-mail >= 0.4.9
    , MonadCatchIO-transformers
    , monad-control
    , mtl > 2 && < 2.2
    , mtl-compat
    , old-locale
    , postgresql-simple
    , pretty-show
    , random
    , resource-pool >= 0.2.3.2 && < 0.3
    , safe
    , safecopy
    , sandi
    , scrypt
    , servant >= 0.4.1 && < 0.6
    , servant-docs >= 0.4.1 && < 0.6
    , servant-server >= 0.4.1 && < 0.6
    , snap
    , snap-core
    , snap-server
    , string-conversions
    , template-haskell
    , text
    , thyme
    , time
    , transformers
    , unordered-containers
    , uri-bytestring
    , vector-space
    , void
    , wai
    , warp

executable thentos
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w

executable build-docs
  if flag(with-build-docs-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      BuildDocs.hs
  ghc-options:
      -Wall -threaded -rtsopts
  build-depends:
      base
    , thentos-core
