name:                thentos-core
version:             0.2.0
synopsis:            The swiss army knife of privacy-preserving identity management
description:
  This is an experimental platform for identity management in web
  applications, inspired by software like shibboleth and sproxy.  See
  README.md for more (if still a bit sketchy) details.
license:             AGPL
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

data-files:
    schema/schema.sql
    schema/wipe.sql
    frontend/static/screen.css
    resources/fonts/*.ttf

extra-source-files:
    frontend/static/screen.css

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: False

flag with-captcha-executable
  default: False

flag with-importa3u-executable
  default: False

flag development
  description: Development mode tweaks cabal search behavior in Paths_thentos_core__
  default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j1
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  if flag(development)
    cpp-options: -DDEVELOPMENT
  exposed-modules:
      Database.PostgreSQL.Simple.Missing
    , LIO.Missing
    , Paths.TH
    , Paths_thentos_core__
    , System.Log.Missing
    , Thentos
    , Thentos.Action
    , Thentos.Action.Core
    , Thentos.Action.SimpleAuth
    , Thentos.Action.Types
    , Thentos.Action.Unsafe
    , Thentos.Backend.Api.Auth
    , Thentos.Backend.Api.Auth.Types
    , Thentos.Backend.Api.Captcha
    , Thentos.Backend.Api.Docs.Common
    , Thentos.Backend.Api.Docs.Proxy
    , Thentos.Backend.Api.Proxy
    , Thentos.Backend.Api.PureScript
    , Thentos.Backend.Api.Simple
    , Thentos.Backend.Core
    , Thentos.Config
    , Thentos.Ends.Types
    , Thentos.Frontend
    , Thentos.Frontend.Handlers
    , Thentos.Frontend.Handlers.Combinators
    , Thentos.Frontend.Pages
    , Thentos.Frontend.State
    , Thentos.Frontend.TH
    , Thentos.Frontend.Types
    , Thentos.Smtp
    , Thentos.Sybil
    , Thentos.Sybil.AudioCaptcha
    , Thentos.Sybil.GraphicCaptcha
    , Thentos.Transaction
    , Thentos.Transaction.Core
    , Thentos.Types
    , Thentos.Util
  other-modules:
      Paths_thentos_core
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , aeson-utils >=0.3.0.2 && <0.4
    , async >=2.0.2 && <2.1
    , attoparsec >=0.13 && <0.14
    , base >=4.8.1.0 && <5
    , bcrypt >=0.0.7 && <0.1
    , blaze-builder >= 0.4.0 && <0.5
    , blaze-html >=0.8.1.0 && <0.9
    , blaze-markup >=0.7 && <0.8
    , bytestring >=0.10.6.0 && <0.11
    , bytestring-conversion >=0.3.1 && <0.4
    , case-insensitive >=1.2.0.4 && <1.3
    , cassava >= 0.4.4 && <0.5
    , cond >=0.4 && <0.5
    , configifier >=0.0.8 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cookie >=0.4.1 && <0.5
    , cryptonite >=0.6 && <0.8
    , digestive-functors >=0.8.0.0 && <0.9
    , digestive-functors-blaze >=0.6.0.6 && <0.7
    , directory >=1.2.2.0 && <1.3
    , either >=4.4.1 && <4.5
    , elocrypt >=0.4.1 && <0.5
    , email-validate >=2.1.3 && <2.2
    , errors >=2.0.0 && <2.1
    , filepath >=1.4.0.0 && <1.5
    , FontyFruity == 0.5.2
    , functor-infix >=0.0.3 && <0.1
    , generic-aeson >=0.2.0.7 && <0.3
    , hastache >= 0.6.1 && <0.7
    , hslogger >=1.2.9 && <1.3
    , http-api-data >=0.1 && <0.2
    , http-client >=0.4.22 && <0.5
    , http-media >=0.6.2 && <0.7
    , http-reverse-proxy >=0.4.2 && <0.5
    , http-types >=0.8.6 && <0.9
    , JuicyPixels >=3.2.6.2 && <3.3
    , lens >=4.12.3 && <4.13
    , lifted-base >=0.2.3.6 && <0.3
    , linear >= 1.20.1 && <1.30
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , MonadCatchIO-transformers >=0.3.1.3 && <0.4
    , monad-control >=1 && <1.1
    , MonadRandom >=0.4 && <0.5
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , network-uri >=2.6 && <2.7
    , old-locale >=1.0.0.7 && <1.1
    , postgresql-simple >=0.4.10 && <0.5
    , pretty-show >=1.6.8.2 && <1.7
    , process >=1.2 && <1.3
    , random >=1.1 && <1.2
    , Rasterific == 0.6.1
    , resource-pool >=0.2.3.2 && <0.3
    , safe >=0.3.9 && <0.4
    , sandi >=0.3.5 && <0.4
    , scrypt >=0.5.0 && <0.6
    , servant ==0.5
    , servant-blaze ==0.5
    , servant-docs ==0.5
    , servant-foreign ==0.5
    , servant-js ==0.5
    , servant-server ==0.5
    , servant-session ==0.5
    , string-conversions >=0.4 && <0.5
    , template-haskell >=2.10 && <2.11
    , temporary >=1.2 && <1.3
    , text >=1.2.1.3 && <1.3
    , thyme >=0.3.5.5 && <0.4
    , time >=1.5 && <1.6
    , transformers >=0.4.2.0 && <0.5
    , unordered-containers >=0.2.5.1 && <0.3
    , uri-bytestring >=0.1.8 && <0.2
    , vault >=0.3 && <0.4
    , wai >=3.0.3.0 && <3.1
    , wai-digestive-functors
    , wai-extra >= 3.0 && <3.1
    , wai-session >=0.3.2 && <0.4
    , warp >=3.1.3 && <3.2

executable thentos
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
  if flag(development)
    cpp-options: -DDEVELOPMENT

executable thentos-captcha
  if flag(with-captcha-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Captcha.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
    , async
    , configifier
    , hslogger
  if flag(development)
    cpp-options: -DDEVELOPMENT

executable thentos-importa3u
  if flag(with-importa3u-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      ImportA3Users.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core

    , bytestring
    , cassava
    , postgresql-simple
    , string-conversions
    , time
    , vector
  if flag(development)
    cpp-options: -DDEVELOPMENT
