name:                thentos-tests
version:             0.0.1.1
synopsis:            Test infrastructure for thentos-*
description:
  See https://github.com/liqd/thentos.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

extra-source-files:
  tests/Thentos/ActionSpec.hs
  tests/Thentos/Backend/Api/SimpleSpec.hs
  tests/Thentos/FrontendSpec.hs
  tests/Thentos/TypesSpec.hs
  tests/Thentos/TransactionSpec.hs
  tests/ThentosSpec.hs

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Test.Arbitrary
    , Thentos.Test.Config
    , Thentos.Test.Core
    , Thentos.Test.Network
    , Thentos.Test.Utils
    , Thentos.Test.WebDriver.Missing
  ghc-options:
      -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      acid-state >=0.12.4 && <0.13
    , aeson >=0.8.0.2 && <0.9
    , async >=2.0.2 && <2.1
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , directory >=1.2.2.0 && <1.3
    , filepath >=1.4.0.0 && <1.5
    , hslogger >=1.2.9 && <1.3
    , http-client >=0.4.22 && <0.5
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , pretty-show >=1.6.8.2 && <1.7
    , QuickCheck >=2.8.1 && <2.9
    , safecopy >=0.8.5 && <0.9
    , scrypt >=0.5.0 && <0.6
    , string-conversions >=0.4 && <0.5
    , template-haskell >=2.10.0.0 && <2.11
    , temporary >=1.2.0.3 && <1.3
    , text >=1.2.1.3 && <1.3
    , thentos-core >=0.0.1.1 && <0.1
    , transformers >=0.4.2.0 && <0.5
    , transformers-base >=0.4.4 && <0.5
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , webdriver >=0.6.2.1 && <0.7

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      acid-state >=0.12.4 && <0.13
    , aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , async >=2.0.2 && <2.1
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , cereal >=0.4.1.1 && <0.5
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , directory >=1.2.2.0 && <1.3
    , email-validate >=2.1.3 && <2.2
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.1
    , hslogger >=1.2.9 && <1.3
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , http-client >=0.4.22 && <0.5
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , pretty-show >=1.6.8.2 && <1.7
    , process >=1.2.3.0 && <1.3
    , QuickCheck >=2.8.1 && <2.9
    , regex-easy >=0.1.0.0 && <0.2
    , safecopy >=0.8.5 && <0.9
    , scrypt >=0.5.0 && <0.6
    , servant-server ==0.5
    , snap >=0.14.0.6 && <0.15
    , snap-core >=0.9.8.0 && <0.10
    , string-conversions >=0.4 && <0.5
    , system-fileio >=0.3.16.3 && <0.4
    , temporary >=1.2.0.3 && <1.3
    , text >=1.2.1.3 && <1.3
    , thentos-core >=0.0.1.1 && <0.1
    , thentos-tests >=0.0.1.1 && <0.1
    , thyme >=0.3.5.5 && <0.4
    , transformers >=0.4.2.0 && <0.5
    , transformers-base >=0.4.4 && <0.5
    , unix >=2.7.1.0 && <2.8
    , unordered-containers >=0.2.5.1 && <0.3
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , webdriver >=0.6.2.1 && <0.7

benchmark load-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench tests
  main-is:
      Main.hs
  ghc-options:
      -Wall -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      acid-state >=0.12.4 && <0.13
    , aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , async >=2.0.2 && <2.1
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , cereal >=0.4.1.1 && <0.5
    , conduit >=1.2.5 && <1.3
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , directory >=1.2.2.0 && <1.3
    , email-validate >=2.1.3 && <2.2
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.1
    , hslogger >=1.2.9 && <1.3
    , hspec >=2.1.10 && <2.3
    , http-conduit >=2.1.8 && <2.2
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , pretty-show >=1.6.8.2 && <1.7
    , process >=1.2.3.0 && <1.3
    , pronk >=0.1.2 && <0.2
    , QuickCheck >=2.8.1 && <2.9
    , random >=1.1 && <1.2
    , regex-easy >=0.1.0.0 && <0.2
    , resourcet >=1.1.6 && <1.2
    , safe >=0.3.9 && <0.4
    , safecopy >=0.8.5 && <0.9
    , sandi >=0.3.5 && <0.4
    , scrypt >=0.5.0 && <0.6
    , servant-server ==0.5
    , snap >=0.14.0.6 && <0.15
    , snap-core >=0.9.8.0 && <0.10
    , string-conversions >=0.4 && <0.5
    , system-fileio >=0.3.16.3 && <0.4
    , temporary >=1.2.0.3 && <1.3
    , text >=1.2.1.3 && <1.3
    , text-format >=0.3.1.1 && <0.4
    , thentos-core >=0.0.1.1 && <0.1
    , thentos-tests >=0.0.1.1 && <0.1
    , thyme >=0.3.5.5 && <0.4
    , time >=1.5.0.1 && <1.6
    , transformers >=0.4.2.0 && <0.5
    , transformers-base >=0.4.4 && <0.5
    , unix >=2.7.1.0 && <2.8
    , unordered-containers >=0.2.5.1 && <0.3
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , webdriver >=0.6.2.1 && <0.7
