name:                thentos-tests
version:             0.2.0
synopsis:            Test infrastructure for thentos-*
description:
  See https://github.com/liqd/thentos.
license:             AGPL
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j1
  cpp-options:
      -DGHC_GENERICS
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Test.Arbitrary
    , Thentos.Test.Config
    , Thentos.Test.Core
    , Thentos.Test.DefaultSpec
    , Thentos.Test.Network
    , Thentos.Test.Transaction
    , Thentos.Test.WebDriver.Missing
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson >=0.8.0.2 && <0.9
    , async >=2.0.2 && <2.1
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , configifier >=0.0.8 && <0.1
    , containers >=0.5.6.2 && <0.6
    , directory >=1.2.2.0 && <1.3
    , cryptonite >=0.6 && <0.8
    , filepath >=1.4.0.0 && <1.5
    , hslogger >=1.2.9 && <1.3
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , http-types >=0.8.6 && <0.9
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mockery >=0.3.2 && <0.4
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , postgresql-simple >=0.4.10 && <0.5
    , process >=1.2.3.0 && <1.3
    , QuickCheck >=2.8.1 && <2.9
    , resource-pool >=0.2.3.2 && <0.3
    , scrypt >=0.5.0 && <0.6
    , string-conversions >=0.4 && <0.5
    , template-haskell >=2.10.0.0 && <2.11
    , temporary >=1.2.0.3 && <1.3
    , text >=1.2.1.3 && <1.3
    , thentos-core ==0.2.0
    , transformers >=0.4.2.0 && <0.5
    , transformers-base >=0.4.4 && <0.5
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , webdriver >=0.6.2.1 && <0.7
    , wreq >=0.4 && <0.5

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      aeson >=0.8.0.2 && <0.9
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , blaze-html
    , bytestring
    , case-insensitive >=1
    , cassava
    , configifier >=0.0.8 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cookie >=0.4.1.6 && <4.2
    , digestive-functors
    , digestive-functors-blaze
    , directory >=1.2.2.0 && <1.3
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.4
    , HCodecs >=0.5 && <0.6
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , http-types >=0.8.6 && <0.9
    , JuicyPixels >=3.2
    , lens >=4.12.3 && <4.13
    , lio >=0.11.5.0 && <0.12
    , MonadRandom >=0.4 && <0.5
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , postgresql-simple >=0.4.10 && <0.5
    , process >=1.2 && <1.3
    , QuickCheck >=2.8.1 && <2.9
    , resource-pool >=0.2.3.2 && <0.3
    , servant
    , servant-blaze
    , servant-server
    , servant-session >=0.5 && <0.6
    , string-conversions >=0.4 && <0.5
    , text >=1.2.1.3 && <1.3
    , thentos-core ==0.2.0
    , thentos-tests ==0.2.0
    , thyme >=0.3.5.5 && <0.4
    , transformers >=0.4.2.0 && <0.5
    , vault >=0.3.0.4 && <3.1
    , vector
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , wai-session >=0.3.2 && <0.4
    , webdriver >=0.6.2.1 && <0.7
    , word8 >=0.1 && <0.2
    , wreq >=0.4 && <0.5

benchmark load-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Main.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      aeson >=0.8.0.2 && <0.9
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , configifier >=0.0.8 && <0.1
    , functor-infix >=0.0.3 && <0.1
    , http-conduit >=2.1.8 && <2.2
    , http-types >=0.8.6 && <0.9
    , postgresql-simple >=0.4.10 && <0.5
    , pronk >=0.1.2 && <0.2
    , random >=1.1 && <1.2
    , resource-pool >=0.2.3.2 && <0.3
    , safe >=0.3.9 && <0.4
    , sandi >=0.3.5 && <0.4
    , string-conversions >=0.4 && <0.5
    , text >=1.2.1.3 && <1.3
    , thentos-core ==0.2.0
    , thentos-tests ==0.2.0
