name:                thentos-tests
version:             0.9.0
synopsis:            Test infrastructure for thentos-*
description:
  See https://github.com/liqd/thentos.
license:             AGPL
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j1
  cpp-options:
      -DGHC_GENERICS
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Test.Arbitrary
    , Thentos.Test.Config
    , Thentos.Test.Core
    , Thentos.Test.DefaultSpec
    , Thentos.Test.Network
    , Thentos.Test.Transaction
    , Thentos.Test.WebDriver.Missing
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson
    , async
    , attoparsec
    , base >=4.8.1.0 && <5
    , bytestring
    , case-insensitive
    , configifier
    , containers
    , cryptonite
    , directory
    , filepath
    , hslogger
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , http-types
    , lens
    , lifted-base
    , lio
    , mockery >=0.3.2 && <0.4
    , mtl
    , network
    , postgresql-simple
    , process
    , QuickCheck >=2.8.1 && <2.9
    , resource-pool
    , scrypt
    , string-conversions
    , template-haskell
    , temporary
    , text
    , thentos-core ==0.9.0
    , transformers
    , transformers-base >=0.4.4 && <0.5
    , wai
    , wai-extra
    , webdriver >=0.6.2.1 && <0.9
    , wreq >=0.4 && <0.5

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      aeson
    , aeson-pretty
    , attoparsec
    , base >=4.8.1.0 && <5
    , bcrypt
    , blaze-html
    , bytestring
    , case-insensitive
    , cassava
    , configifier
    , containers
    , cookie
    , digestive-functors
    , digestive-functors-blaze
    , directory
    , email-validate
    , filepath
    , functor-infix
    , HCodecs >=0.5 && <0.6
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , http-types
    , JuicyPixels
    , lens
    , lio
    , MonadRandom
    , mtl
    , network
    , postgresql-simple
    , process
    , QuickCheck >=2.8.1 && <2.9
    , resource-pool
    , servant
    , servant-blaze
    , servant-server
    , servant-docs
    , string-conversions
    , text
    , thentos-cookie-session ==0.9.0
    , thentos-core ==0.9.0
    , thentos-tests ==0.9.0
    , thyme
    , transformers
    , vault
    , vector
    , wai
    , wai-extra
    , wai-session
    , webdriver >=0.6.2.1 && <0.9
    , word8 >=0.1 && <0.2
    , wreq >=0.4 && <0.5
    , xml-html-conduit-lens >=0.3 && <0.4

benchmark load-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Main.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      aeson
    , attoparsec
    , base >=4.8.1.0 && <5
    , bytestring
    , configifier
    , functor-infix
    , http-conduit >=2.1.8 && <2.2
    , http-types
    , postgresql-simple
    , pronk >=0.1.2 && <0.2
    , random
    , resource-pool
    , safe
    , sandi
    , string-conversions
    , text
    , thentos-core ==0.9.0
    , thentos-tests ==0.9.0
