Name:                helloworld
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable helloworld
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      base                      >= 4.4
    , blaze-html
    , blaze-markup              >= 0.6.3
    , bytestring                >= 0.9.1
    , case-insensitive
    , configurator              >= 0.3.0.0
    , heist                     >= 0.14
    , http-client               >= 0.4.7
    , http-conduit              >= 2.1.5
    , lens                      >= 3.7.6
    , MonadCatchIO-transformers >= 0.2.1
    , mtl                       >= 2
    , snap                      >= 0.13
    , snap-blaze
    , snap-core                 >= 0.9
    , snap-loader-static        >= 0.9
    , snap-server               >= 0.9
    , string-conversions
    , text                      >= 0.11
    , time                      >= 1.1
    , unordered-containers
    , xmlhtml                   >= 0.1
    , pretty-show

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
